--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.0.1",
+    "antd": "^5.23.3",
+    "framer-motion": "^12.0.6",
+    "next": "15.1.6",
+    "postcss": "^8.5.1",
+    "rc-texty": "^0.2.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "tailwindcss": "^4.0.1"
   }
 }
