--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "15.1.6",
     "postcss": "^8.5.1",
     "rc-texty": "^0.2.0",
+    "rc-tween-one": "^3.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.0.1"
