--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.6.0",
     "@tailwindcss/postcss": "^4.0.1",
     "antd": "^5.23.3",
     "framer-motion": "^12.0.6",
