--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "rc-tween-one": "^3.0.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swiper": "^11.2.2",
     "tailwindcss": "^4.0.1"
   }
 }
