--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.23.3",
     "framer-motion": "^12.0.6",
     "next": "15.1.6",
+    "nodemailer": "^6.10.0",
     "postcss": "^8.5.1",
     "rc-texty": "^0.2.0",
     "rc-tween-one": "^3.0.6",
