--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.6.0",
+    "@lottiefiles/dotlottie-react": "^0.13.0",
     "@tailwindcss/postcss": "^4.0.1",
     "antd": "^5.24.0",
     "framer-motion": "^12.0.6",
